Fixing some spacing & responsivity. Cleaning up smaller design elements.

--- a/src/frontend/static/css/ai_edits/ai_edits.css
+++ b/src/frontend/static/css/ai_edits/ai_edits.css
@@ -199,6 +199,9 @@ body {
 
 .result-group {
   padding: 15px 0px;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .result-field pre {
@@ -215,7 +218,8 @@ body {
 
 label {
   padding-top: 0;
-  display: block;
+  display: inline-block;
+  margin-right: 10px;
 }
 
 /* Spinner style */
@@ -254,12 +258,12 @@ button.ai-edit-button.disabled {
 }
 
 .button-with-help {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   /* Vänd ordningen så att span kommer före knappen */
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: left;
   margin: 0;
 }
 
@@ -353,6 +357,15 @@ button span.credit-cost {
     width: 100%;
   }
 
+  select, input[type="text"] {
+    margin-right: 0;
+    margin-bottom: 5px;
+  }
+
+  label {
+    margin-bottom: 5px;
+  }
+
   .content-wrapper, #enhancementTools, #audioAnalysisSection, #audioCuttingSection, #aiCuttingSection {
     width: 100%;
     display: flex;
@@ -383,6 +396,18 @@ button span.credit-cost {
 
   #tabs button:last-of-type {
     margin-bottom: 0px;
+  }
+
+  .button-with-help {
+    flex-direction: column;
+  }
+
+  .ap-container {
+    text-align: center;
+  }
+
+  .help-icon {
+    margin-right: 0;
   }
 
 }
